[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/bg/store/store.png" type="Texture" id=2]
[ext_resource path="res://scenes/interactable.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bg/store/store_awning.png" type="Texture" id=4]
[ext_resource path="res://assets/bg/store/store_outside.png" type="Texture" id=5]
[ext_resource path="res://assets/bg/store/store_shutter.png" type="Texture" id=6]
[ext_resource path="res://scenes/house/store.gd" type="Script" id=7]
[ext_resource path="res://assets/music/sfx/shutter_operating.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/house/spawnPos.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/1980_label.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/house/drawer.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("shutterSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("shutterSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "hideMoney"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("money:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 10, 1 ),
"update": 0,
"values": [ Vector2( 38, 94 ), Vector2( 38, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("money:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.870588, 0.921569, 0.827451, 1 ), Color( 0.870588, 0.921569, 0.827451, 1 ), Color( 0.870588, 0.921569, 0.827451, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("money:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("money:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38, 94 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("money:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.870588, 0.921569, 0.827451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("money:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="store" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="outside" type="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="awning" type="Sprite" parent="." index="1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="bg" parent="." index="2"]
texture = ExtResource( 2 )

[node name="shutter" type="Sprite" parent="." index="3"]
position = Vector2( 160, 120 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 7
frame = 6

[node name="openClose" type="AnimationPlayer" parent="shutter" index="0"]
playback_speed = 0.5
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="shutterSFX" type="AudioStreamPlayer" parent="shutter" index="1"]
stream = ExtResource( 8 )
volume_db = -3.0
pitch_scale = 0.8

[node name="collision" parent="." index="4"]
bordersizeL = 20
bordersizeR = 14

[node name="cashier" parent="." index="5" instance=ExtResource( 3 )]
position = Vector2( 52, 150 )
hide_on_interact = true

[node name="money" type="Label" parent="." index="6"]
margin_left = 38.0
margin_top = 94.0
margin_right = 65.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.870588, 0.921569, 0.827451, 1 )
text = "$69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shutterInteract" parent="." index="7" instance=ExtResource( 3 )]
position = Vector2( 158, 150 )

[node name="storeCupboard" parent="." index="8" instance=ExtResource( 3 )]
position = Vector2( 286, 150 )

[node name="toLanding" parent="." index="9" instance=ExtResource( 3 )]
position = Vector2( 399, 150 )
audio = "doorSFX"

[node name="landingPos" type="Position2D" parent="." index="10"]
position = Vector2( 387, 186 )
script = ExtResource( 9 )
facing = 0

[node name="openCashier" type="AnimationPlayer" parent="." index="11"]
anims/hideMoney = SubResource( 3 )
anims/showMoney = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="12"]

[node name="drawer" parent="CanvasLayer" index="0" instance=ExtResource( 11 )]
visible = false
[connection signal="interacted" from="cashier" to="." method="_on_cashier_interacted"]
[connection signal="player_exited" from="cashier" to="." method="_on_cashier_player_exited"]
[connection signal="interacted" from="shutterInteract" to="." method="_on_shutterInteract_interacted"]
[connection signal="interacted" from="storeCupboard" to="." method="_on_storeCupboard_interacted"]
[connection signal="interacted" from="toLanding" to="." method="change_environment" binds= [ "landing" ]]
[connection signal="returned" from="CanvasLayer/drawer" to="." method="_on_drawer_returned"]
